--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "cookies-next": "^5.1.0",
     "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
